Trained model and updated file structure

--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -105,40 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/242 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 loss: 1.943797221361113: 100%|██████████| 242/242 [00:13<00:00, 17.48it/s] \n",
-      "Epoch 2 loss: 1.94059882873346: 100%|██████████| 242/242 [00:13<00:00, 18.50it/s]  \n",
-      "Epoch 3 loss: 1.9365219729991: 100%|██████████| 242/242 [00:13<00:00, 17.85it/s]   \n",
-      "Epoch 4 loss: 1.9318340396092943: 100%|██████████| 242/242 [00:13<00:00, 18.36it/s]\n",
-      "Epoch 5 loss: 1.9300252031688847: 100%|██████████| 242/242 [00:13<00:00, 18.15it/s]\n",
-      "Epoch 6 loss: 1.925383195404179: 100%|██████████| 242/242 [00:13<00:00, 18.47it/s] \n",
-      "Epoch 7 loss: 1.9256146998444865: 100%|██████████| 242/242 [00:13<00:00, 18.03it/s]\n",
-      "Epoch 8 loss: 1.922529495452061: 100%|██████████| 242/242 [00:13<00:00, 18.02it/s] \n",
-      "Epoch 9 loss: 1.9242701239822324: 100%|██████████| 242/242 [00:13<00:00, 17.98it/s]\n",
-      "Epoch 10 loss: 1.92448389677962: 100%|██████████| 242/242 [00:13<00:00, 17.45it/s]  \n",
-      "Epoch 11 loss: 1.9240965656012543: 100%|██████████| 242/242 [00:13<00:00, 18.40it/s]\n",
-      "Epoch 12 loss: 1.9247833894304007: 100%|██████████| 242/242 [00:12<00:00, 18.70it/s]\n",
-      "Epoch 13 loss: 1.9241969137152364: 100%|██████████| 242/242 [00:13<00:00, 18.42it/s]\n",
-      "Epoch 14 loss: 1.9246351034188074: 100%|██████████| 242/242 [00:12<00:00, 18.63it/s]\n",
-      "Epoch 15 loss: 1.9247836987834333: 100%|██████████| 242/242 [00:12<00:00, 18.73it/s]\n",
-      "Epoch 16 loss: 1.9248701565521809: 100%|██████████| 242/242 [00:14<00:00, 17.17it/s]\n",
-      "Epoch 17 loss: 1.9247587643379023: 100%|██████████| 242/242 [00:14<00:00, 16.46it/s]\n",
-      "Epoch 18 loss: 1.9209356239019346: 100%|██████████| 242/242 [00:14<00:00, 17.19it/s]\n",
-      "Epoch 19 loss: 1.9229194694314122: 100%|██████████| 242/242 [00:14<00:00, 16.63it/s]\n",
-      "Epoch 20 loss: 1.9246879530347083: 100%|██████████| 242/242 [00:13<00:00, 17.65it/s]\n"
+      "Epoch 1 loss: 1.9302697654598016: 100%|██████████| 242/242 [00:43<00:00,  5.52it/s]\n"
      ]
     },
     {
@@ -150,14 +124,14 @@
       "           0       0.00      0.00      0.00       958\n",
       "           1       0.02      1.00      0.03       111\n",
       "           2       0.00      0.00      0.00      1024\n",
-      "           3       0.00      0.00      0.00      1774\n",
+      "           3       0.80      0.00      0.00      1774\n",
       "           4       0.00      0.00      0.00      1233\n",
-      "           5       0.00      0.00      0.00      1247\n",
+      "           5       0.30      0.00      0.01      1247\n",
       "           6       0.00      0.00      0.00       831\n",
       "\n",
       "    accuracy                           0.02      7178\n",
-      "   macro avg       0.00      0.14      0.00      7178\n",
-      "weighted avg       0.00      0.02      0.00      7178\n",
+      "   macro avg       0.16      0.14      0.01      7178\n",
+      "weighted avg       0.25      0.02      0.00      7178\n",
       "\n",
       "Finished Training\n"
      ]
@@ -178,8 +152,7 @@
    "source": [
     "import torch\n",
     "from torch import optim, nn\n",
-    "from cnnNew import FERModel\n",
-    "from preprocessing import train_loader, test_loader\n",
+    "from cnn import FERModel\n",
     "from tqdm import tqdm\n",
     "from sklearn.metrics import classification_report\n",
     "import numpy as np\n",
@@ -193,7 +166,7 @@
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Number of epochs to train for\n",
-    "num_epochs = 20\n",
+    "num_epochs = 1\n",
     "\n",
     "# Loop over the dataset multiple times\n",
     "for epoch in range(num_epochs):\n",
@@ -218,7 +191,7 @@
     "            f\"Epoch {epoch + 1} loss: {running_loss/(i+1)}\")\n",
     "\n",
     "# Save the trained model\n",
-    "torch.save(model.state_dict(), 'bestmodel.pth')\n",
+    "torch.save(model.state_dict(), 'newmodel10.pth')\n",
     "\n",
     "# Evaluate the model on the test set and print a classification report\n",
     "model.eval()\n",
@@ -235,6 +208,28 @@
     "print(classification_report(all_labels, all_predictions))\n",
     "\n",
     "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'angry': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'neutral': 4, 'sad': 5, 'surprise': 6}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset in train_dataset.datasets:\n",
+    "    try:\n",
+    "        print(dataset.class_to_idx)\n",
+    "    except AttributeError:\n",
+    "        print(\"\")\n"
    ]
   }
  ],
